iKYC/SME Phase -1/Istio/Request-Routing/request-routing-demo/requesting-routing-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routing-service-v1
  namespace: istio-routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routing-service
      version: v1
  template:
    metadata:
      labels:
        app: routing-service
        version: v1
    spec:
      containers:
        - name: routing-service
          image: request-routing-image:1.0
          ports:
            - containerPort: 8091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routing-service-v2
  namespace: istio-routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routing-service
      version: v2
  template:
    metadata:
      labels:
        app: routing-service
        version: v2
    spec:
      containers:
        - name: routing-service
          image: request-routing-image:2.0
          ports:
            - containerPort: 8091
