iKYC/SME Phase -1/Istio/Request-Routing/request-routing-demo/requesting-routing-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: routing-service
  namespace: istio-routing
spec:
  selector:
    app: routing-service
  ports:
    - port: 80
      targetPort: 8091
