iKYC/SME Phase -1/Istio/Request-Routing/request-routing-demo/requesting-routing-config/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: routing-destination
  namespace: istio-routing
spec:
  host: routing-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
